# nsa-schemas

./: .gitignore  .pydocstyle  README.md  pyproject.toml  pytest.ini
nsa_schemas/: __init__.py  availability.py  member.py  planning.py  team.py
tests/: test_availability.py  test_member.py  test_planning.py  test_team.py
