[tool.poetry]
name = "nsa-schemas"
version = "0.2.0"
description = "Librairie commune de schémas Pydantic pour les microservices NSA"
authors = ["rhodu13 <rhodu13@gmail.com>"]
packages = [{ include = "nsa_schemas" }]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
